[gd_scene load_steps=10 format=2]

[ext_resource path="res://UXAndPO.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menu Buttons.tscn" type="PackedScene" id=2]
[ext_resource path="res://PopUpWindow2.tscn" type="PackedScene" id=3]
[ext_resource path="res://DialogBoxes.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stage1Dialogs.gd" type="Script" id=5]
[ext_resource path="res://PO_Idle.tscn" type="PackedScene" id=6]
[ext_resource path="res://UX_Idle.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Emotes/Happy emote.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "EmoteBobbing"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 742, 219 ), Vector2( 742, 225 ) ]
}

[node name="StageOneEmpathize" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UXAndPO" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 2 )

[node name="Stage1Dialogs" type="Control" parent="."]
anchor_left = 0.53
anchor_top = 1.0
anchor_right = 0.53
anchor_bottom = 1.0
margin_left = -468.4
margin_top = -696.0
margin_right = 467.6
margin_bottom = -40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}
dialogue_file_path = "res://JSON/test_choices.json"

[node name="HappyEmote" type="Sprite" parent="Stage1Dialogs"]
position = Vector2( 490, 193 )
scale = Vector2( 5, 5 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Stage1Dialogs/HappyEmote"]
autoplay = "EmoteBobbing"
anims/EmoteBobbing = SubResource( 1 )

[node name="UX_Idle" parent="Stage1Dialogs" instance=ExtResource( 7 )]
position = Vector2( 500, 392 )

[node name="PO_Idle" parent="Stage1Dialogs" instance=ExtResource( 6 )]
position = Vector2( 322, 335 )
scale = Vector2( 2, 2 )

[node name="DialogBoxes" parent="Stage1Dialogs" instance=ExtResource( 4 )]
visible = false
anchor_left = 0.5
anchor_top = 1.051
anchor_right = 0.5
anchor_bottom = 1.051
margin_left = -336.0
margin_top = -244.456
margin_right = 304.0
margin_bottom = 44.544

[node name="PopUpWindow" parent="Stage1Dialogs" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
margin_left = -40.0
margin_top = -357.0
margin_bottom = -317.0

[node name="Menu Buttons" parent="." instance=ExtResource( 2 )]

[connection signal="button_pressed" from="Stage1Dialogs/DialogBoxes" to="Stage1Dialogs" method="_on_DialogBoxes_button_pressed"]
[connection signal="pop_up_window_complete" from="Stage1Dialogs/PopUpWindow" to="Stage1Dialogs" method="_on_PopUpWindow_pop_up_window_complete"]
